--- a/comprehend-workshop.ipynb
+++ b/comprehend-workshop.ipynb
@@ -38,7 +38,7 @@
     "import sys\n",
     "import time\n",
     "import boto3\n",
-    "from sagemaker import get_execution_role"
+    "import sagemaker as sm"
    ]
   },
   {
@@ -57,8 +57,8 @@
    "source": [
     "region = 'us-east-1'\n",
     "\n",
-    "# change this to an existing S3 bucket in your AWS account\n",
-    "s3bucket = 'am-tmp2'\n",
+    "sess = sm.Session()\n",
+    "s3bucket = sess.default_bucket()    \n",
     "s3prefix = 'comprehend'\n",
     "\n",
     "# this is where the various analysis results files will be stored on the local file system of this SageMaker instance\n",
@@ -66,8 +66,9 @@
     "!mkdir -p $results_dir\n",
     "\n",
     "# this is the IAM Role that defines which permissions this SageMaker instance has\n",
-    "sm_execution_role = get_execution_role()\n",
-    "print(sm_execution_role)\n"
+    "sm_execution_role = sm.get_execution_role()\n",
+    "print('sagemaker execution role: ', sm_execution_role)\n",
+    "print('s3 bucket:', s3bucket)"
    ]
   },
   {
@@ -83,9 +84,11 @@
     "- AmazonComprehendFullAccess\n",
     "\n",
     "Also, an Amazon Comprehend service Role needs to be created to grant Amazon Comprehend read access to your input data.  \n",
-    "When creating this new Role, the default Policies are sufficient (i.e., no other Policies need to be added/modified).\n",
+    "When creating this new Role, the default Policies are sufficient (i.e., no other Policies need to be added/modified).  \n",
+    "In our example, we are creating a Role with the name `myComprehendServiceRole`\n",
     "\n",
-    "Lastly, the `SageMaker Execution Role` must be allowed to Pass the Comprehend Service Role. To allow this, you must attach a Policy to the `SageMaker Execution Role`. Below, the Resource entry is the ARN of the Comprehend service Role which you created. You can either create this as a new Policy and attach it or add it as an in-line Policy.\n",
+    "Lastly, the `SageMaker Execution Role` must be allowed to Pass the Comprehend Service Role. To allow this, you must attach a Policy to the `SageMaker Execution Role`. Below, the Resource entry is the ARN of the Comprehend service Role which you created. You can either create this as a new Policy and attach it or add it as an in-line Policy.  \n",
+    "In our example, we are creating a Role with the name `ComprehendDataAccessForSageMaker`\n",
     "\n",
     "```json\n",
     "{\n",
@@ -97,11 +100,21 @@
     "                \"iam:GetRole\",\n",
     "                \"iam:PassRole\"\n",
     "            ],\n",
-    "            \"Resource\": \"arn:aws:iam::810190279255:role/amComprehendServiceRole\"\n",
+    "            \"Resource\": \"arn:aws:iam::810190279255:role/myComprehendServiceRole\"\n",
     "        }\n",
     "    ]\n",
     "}\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set this to the ARN of the Role you created\n",
+    "comprehend_role = 'arn:aws:iam::662559257807:role/ComprehendDataAccessForSageMaker'"
    ]
   },
   {
@@ -421,9 +434,6 @@
     "# start the Amazon Comprehend Topics Analysis job\n",
     "# create a unique Job Name\n",
     "JobName = 'MyJobName-%d' % (time.time())\n",
-    "\n",
-    "# Why is this IAM Role needed?\n",
-    "comprehend_role = 'arn:aws:iam::662559257807:role/ComprehendDataAccess-SM'\n",
     "\n",
     "request = {\n",
     "   \"ClientRequestToken\": \"string\",\n",
