--- a/comprehend-workshop.ipynb
+++ b/comprehend-workshop.ipynb
@@ -294,7 +294,7 @@
     "---\n",
     "## Sentiment Analysis\n",
     "Use Amazon Comprehend to determine the Sentiment of each line of text from the Textract analysis.\n",
-    "* POSITIVE, NEUTRAL, NEGATIVE\n",
+    "* POSITIVE, NEUTRAL, NEGATIVE, MIXED\n",
     "\n",
     "The input is a UTF-8 text string that must contain fewer that 5,000 bytes of UTF-8 encoded characters.\n"
    ]
