added wait loop for textract job

--- a/comprehend-workshop.ipynb
+++ b/comprehend-workshop.ipynb
@@ -114,7 +114,7 @@
    "outputs": [],
    "source": [
     "# set this to the ARN of the Role you created\n",
-    "comprehend_role = 'arn:aws:iam::662559257807:role/ComprehendDataAccessForSageMaker'"
+    "comprehend_role = 'arn:aws:iam::662559257807:role/myComprehendDataAccessRole'"
    ]
   },
   {
@@ -151,7 +151,7 @@
    "source": [
     "# create the Textract Job\n",
     "textract_src_filename = 'amazon-press-release.png'\n",
-    "textract_src_filename = 'police-report.pdf'\n",
+    "#textract_src_filename = 'police-report.pdf'\n",
     "\n",
     "# upload the source document to S3 for Textract to access\n",
     "!aws s3 cp data/$textract_src_filename s3://$s3bucket/$s3prefix/$textract_src_filename\n",
@@ -186,9 +186,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if response['JobStatus'] != 'SUCCEEDED':\n",
-    "    raise\n",
-    "    \n",
+    "while response['JobStatus'] != 'SUCCEEDED':\n",
+    "    print('.', end='')\n",
+    "    response = textract_client.get_document_text_detection(JobId=JobId)\n",
+    "    time.sleep(5)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pages = []\n",
     "while(True):\n",
     "    pages.append(response)\n",
@@ -198,7 +208,7 @@
     "        response = textract_client.get_document_text_detection(JobId=JobId, NextToken=nextToken)\n",
     "\n",
     "    if nextToken == None:\n",
-    "        break\n"
+    "        break"
    ]
   },
   {
