added topic modeling

--- a/comprehend-workshop.ipynb
+++ b/comprehend-workshop.ipynb
@@ -86,7 +86,7 @@
    "source": [
     "# set this to the ARN of the Role you created in the Textract Notebook\n",
     "#comprehend_role = 'arn:aws:iam::662559257807:role/myComprehendDataAccessRole'\n",
-    "comprehend_role = '<enter your Comprehend Role created from the previous Textract workshop>'"
+    "comprehend_role = '<enter the ARN of your Comprehend Data Access Role created in the Textract Workshop>'"
    ]
   },
   {
@@ -321,11 +321,11 @@
    "source": [
     "---\n",
     "## PII Using Batch Processing <a name=\"PII-Batch\"></a>\n",
-    "Use Amazon Comprehend to extract PII directly from a PDF document  \n",
+    "Use Amazon Comprehend to extract PII directly from a text document located in an S3 bucket.\n",
     "\n",
     "In this example, we are running the analysis as an asynchronous job, so the results are stored in a file in the S3 bucket we specify.  \n",
-    "This analysis may take up to 10 minutes to run.  \n",
-    "\n"
+    "\n",
+    "This analysis may take up to 10 minutes to run.  \n"
    ]
   },
   {
@@ -335,7 +335,6 @@
    "outputs": [],
    "source": [
     "# put the file to be analyzed into the s3 bucket\n",
-    "# in this example, this file is the results from running textract on a pdf\n",
     "s3dest = f's3://{s3bucket}/{s3prefix}/{textract_results_filename}'\n",
     "!aws s3 cp ./results/$textract_results_filename $s3dest"
    ]
@@ -431,12 +430,22 @@
     "%%time\n",
     "while True:\n",
     "    response = comp_client.describe_topics_detection_job(JobId=JobId)\n",
-    "    if response['TopicsDetectionJobProperties']['JobStatus'] != 'IN_PROGRESS':\n",
+    "    if response['TopicsDetectionJobProperties']['JobStatus'] not in ['SUBMITTED', 'IN_PROGRESS']:\n",
     "        print('')\n",
     "        break\n",
     "    print('.', end='')\n",
     "    time.sleep(10)\n",
     "response\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Topic Modeling Results\n",
+    "* The first output file, *topic-terms.csv*, is a list of topics in the collection. For each topic, the list includes, by default, the top terms by topic according to their weight.  \n",
+    "* The second file, *doc-topics.csv*, lists the documents associated with a topic and the proportion of the document that is concerned with the topic. If you specified ONE_DOC_PER_FILE the document is identified by the file name. If you specified ONE_DOC_PER_LINE the document is identified by the file name and the 0-indexed line number within the file. \n",
+    "\n"
    ]
   },
   {
@@ -457,8 +466,8 @@
     "!(cd $results_dir; rm -f $basename)\n",
     "\n",
     "print('See the following files:')\n",
-    "!ls -l $results_dir/topic-terms.csv\n",
-    "!ls -l $results_dir/doc-topics.csv"
+    "!head -5 $results_dir/topic-terms.csv\n",
+    "!head -5 $results_dir/doc-topics.csv"
    ]
   },
   {
@@ -480,6 +489,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!(cd ./data; unzip resumes.zip)\n",
     "df = pd.read_csv('./data/resumes.csv')\n",
     "\n",
     "# use 90% of our data for training and the remainder for testing\n",
@@ -637,7 +647,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s3file = response['DocumentClassificationJobProperties']['OutputDataConfig']['S3Uri']"
+    "s3file = response['DocumentClassificationJobProperties']['OutputDataConfig']['S3Uri']\n",
+    "s3file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Download the output file (predictions) from the S3 bucket"
    ]
   },
   {
@@ -646,17 +664,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!aws s3 cp $s3file results/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "!aws s3 cp $s3file results/\n",
     "basename = os.path.basename(s3uri)\n",
     "!(cd results; tar xvzf $basename)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's look at the predictions from our trained Custom Classifier"
    ]
   },
   {
@@ -669,12 +686,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "!head -3 ./data/test.csv | tail -1"
+    "And how do the predictions compare to our test data"
    ]
   },
   {
@@ -682,11 +697,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!head -3 ./data/test.csv | tail -1"
+   ]
   }
  ],
  "metadata": {
-  "instance_type": "ml.t3.medium",
   "kernelspec": {
    "display_name": "Python 3 (Data Science)",
    "language": "python",
